# beasTTY

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  rust-toolchain.toml
.claude/: gsd-file-manifest.json
.claude/agents/: gsd-ai-researcher.md  gsd-debugger.md  gsd-domain-researcher.md  gsd-eval-auditor.md  gsd-eval-planner.md  gsd-executor.md  gsd-framework-selector.md  gsd-phase-researcher.md  gsd-plan-checker.md  gsd-planner.md  gsd-research-synthesizer.md  gsd-roadmapper.md  gsd-ui-researcher.md  gsd-user-profiler.md  gsd-verifier.md
.claude/commands/gsd/: add-phase.md  add-tests.md  add-todo.md  ai-integration-phase.md  analyze-dependencies.md  audit-fix.md  audit-milestone.md  audit-uat.md  autonomous.md  check-todos.md  cleanup.md  code-review-fix.md  code-review.md  complete-milestone.md  discuss-phase.md  do.md  docs-update.md  eval-review.md  execute-phase.md  explore.md  extract_learnings.md  fast.md  forensics.md  from-gsd2.md  graphify.md  health.md  help.md  import.md  inbox.md  ingest-docs.md  insert-phase.md  intel.md  list-phase-assumptions.md  list-workspaces.md  manager.md  map-codebase.md  milestone-summary.md  new-milestone.md  new-project.md  new-workspace.md  (+33 more)
.claude/get-shit-done/references/: artifact-types.md  model-profile-resolution.md  verification-patterns.md
.claude/get-shit-done/templates/: phase-prompt.md
.claude/get-shit-done/workflows/: ai-integration-phase.md  autonomous.md  complete-milestone.md  discovery-phase.md  discuss-phase-assumptions.md  discuss-phase.md  eval-review.md  execute-phase.md  execute-plan.md  explore.md  health.md  help.md  new-milestone.md  new-project.md  note.md  plan-phase.md  profile-user.md  research-phase.md  resume-project.md  secure-phase.md  settings.md  sketch.md  spec-phase.md  ui-phase.md  ui-review.md  undo.md  update.md  (+3 more)
.github/workflows/: pages.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/debug/: 12-force-start-button-does-nothing.md  12-send-path-failure-cluster.md  12-uat-focus-ring-missing.md  12-uat-no-red-border.md  paste-auto-expands-pane-lurches-canvas.md  phase-6-chrome-buttons-non-functional.md  reload-hang-page-unresponsive.md  sc3-zero-copy-heap-sawtooth.md  slide-active-cancel-broken.md  slide-stale-auto-send-cmd.md
.planning/decisions/: ADR-001-parser-strategy.md  ADR-002-wasm-gating.md  ADR-003-slide-v0-2-1-can-amendment.md
.planning/milestones/: v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
crates/beastty-core/: Cargo.toml
crates/beastty-core/src/: grid.rs  key.rs  lib.rs  vt52.rs
crates/beastty-core/src/slide/: framer.rs  tests_only.rs
crates/beastty-core/tests/: boundary_api_shape.rs  clear_visible.rs  core_02_no_browser_deps.rs  fixture_runner.rs  slide_boundary_shape.rs  slide_idempotent_reentry.rs  slide_recv_corpus.rs  slide_recv_memory.rs  slide_recv_payload.rs  slide_reference_corpus.rs  slide_sender.rs  slide_torn_chunk.rs  slide_wasm_boundary_shape.rs  snapshot_at_offset.rs
crates/beastty-core/tests/fixtures/bell/: session.trace
crates/beastty-core/tests/fixtures/esc_y_edges/: session.trace
crates/bestialitty-core/: Cargo.toml
crates/bestialitty-core/src/: dirty.rs  grid.rs  key.rs  lib.rs  scrollback.rs  terminal.rs  vt52.rs
crates/bestialitty-core/src/slide/: crc.rs  framer.rs  mod.rs  state.rs  tests.rs  tests_only.rs
crates/bestialitty-core/src/spike/: hand_rolled.rs  harness.rs  mod.rs  tests.rs  vte_path.rs
crates/bestialitty-core/tests/: boundary_api_shape.rs  clear_visible.rs  core_02_no_browser_deps.rs  fixture_runner.rs  slide_boundary_shape.rs  slide_idempotent_reentry.rs  slide_recv_corpus.rs  slide_recv_memory.rs  slide_recv_payload.rs  slide_reference_corpus.rs  slide_sender.rs  slide_torn_chunk.rs  slide_wasm_boundary_shape.rs  snapshot_at_offset.rs
crates/bestialitty-core/tests/fixtures/basic_print/: session.trace
crates/bestialitty-core/tests/fixtures/erase_j/: session.trace
crates/bestialitty-core/tests/fixtures/erase_k/: session.trace
crates/bestialitty-core/tests/fixtures/identify_reply/: session.trace
crates/bestialitty-core/tests/fixtures/noop_sequences/: session.trace
crates/bestialitty-core/tests/fixtures/torn_esc_y/: session.trace
docs/: SLIDE-UAT.md  SLIDE_Z80_REQUIREMENT.md
images/: convert.sh
scripts/: build.sh  smoke-wasm-build.sh
www/: .gitignore  README.md  _headers  index.html  main.js  package-lock.json  package.json  playwright.config.js
www/input/: clipboard.js  file-source.js  keyboard.js  paste-pump.js  selection.js  tx-sink.js
www/renderer/: atlas.js  bitmap-font.js  canvas.js  chrome.js  cushion-font.js  insigbyte-font.js  scroll-state.js  slide-chip.js  themes.js  vt52-rom-font.js  you-squared-font.js
www/state/: idb.js  prefs.js
www/transport/: echo-swallow.js  serial.js  session-log.js  slide-recv.js  slide.js
(+325 files in other folders)
