[package]
name = "beastty-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Pure-Rust VT52 terminal logic for Beastty (parser, grid, scrollback, key encoder)."

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
# Dev-only: push {offset, byte, state} entries to a bounded ring on malformed input.
# Release builds have zero overhead. See CONTEXT D-15.
trace-malformed = []

[dependencies]
# vte::Parser + Perform drives the production VT52 parser per ADR-001. Pinned to
# exactly 0.15 so a silent `cargo update` cannot drift the `Parser::advance`
# signature out from under us — see ADR-001 "Negative" consequences.
vte = "=0.15"

# SLIDE Phase 7 (CONTEXT D-01): the `crc = "=3.4"` crate was REJECTED in
# favour of a ~30-line hand-roll in src/slide/crc.rs verbatim from
# /home/ant/src/microbeast/SLIDE/slide-rs/src/protocol.rs:16-30. Zero new
# dependencies, byte-for-byte cross-validation against slide-rs is 1:1.
# See `.planning/decisions/ADR-003-slide-v0-2-1-can-amendment.md` (created
# in Plan 07-05) and 07-CONTEXT.md §D-01. Do NOT add `crc = ...` here
# without re-opening that decision.

[dev-dependencies]
# Keep minimal; std alone is sufficient for Phase 1 tests.

[target.'cfg(target_arch = "wasm32")'.dependencies]
# wasm-bindgen is resolved ONLY for the wasm32 target per ADR-002 (Candidate A).
# Native `cargo test` does not compile it — D-20 (`cargo test` with no flags works).
# Pair with `#[cfg(target_arch = "wasm32")] mod wasm_boundary` in src/lib.rs (Plan 03).
wasm-bindgen = "0.2.118"
