[package]
name = "bestialitty-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Pure-Rust VT52 terminal logic for BestialiTTY (parser, grid, scrollback, key encoder)."

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
# Dev-only: push {offset, byte, state} entries to a bounded ring on malformed input.
# Release builds have zero overhead. See CONTEXT D-15.
trace-malformed = []
# Parser-strategy spike (Plan 01-03). Pulls in both prototypes + shared harness
# under `src/spike/` and the optional `vte` dependency. Default builds omit
# everything so production wasm remains dep-free. See ADR-001 (forthcoming).
spike = ["dep:vte"]

[dependencies]
# Phase 1 baseline keeps production deps empty. The `vte` crate is OPTIONAL and
# only pulled in when the `spike` feature is active (parser-strategy prototype
# comparison — Plan 01-03). Pinned to 0.15 per RESEARCH.md; API stable with
# `Parser::advance(&mut self, performer, bytes)` signature.
vte = { version = "0.15", optional = true }

[dev-dependencies]
# Keep minimal; std alone is sufficient for Phase 1 tests.
