[package]
name = "bestialitty-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Pure-Rust VT52 terminal logic for BestialiTTY (parser, grid, scrollback, key encoder)."

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
# Dev-only: push {offset, byte, state} entries to a bounded ring on malformed input.
# Release builds have zero overhead. See CONTEXT D-15.
trace-malformed = []

[dependencies]
# vte::Parser + Perform drives the production VT52 parser per ADR-001. Pinned to
# exactly 0.15 so a silent `cargo update` cannot drift the `Parser::advance`
# signature out from under us — see ADR-001 "Negative" consequences.
vte = "=0.15"

[dev-dependencies]
# Keep minimal; std alone is sufficient for Phase 1 tests.

[target.'cfg(target_arch = "wasm32")'.dependencies]
# wasm-bindgen is resolved ONLY for the wasm32 target per ADR-002 (Candidate A).
# Native `cargo test` does not compile it — D-20 (`cargo test` with no flags works).
# Pair with `#[cfg(target_arch = "wasm32")] mod wasm_boundary` in src/lib.rs (Plan 03).
wasm-bindgen = "0.2.118"
